--- a/resources/scss/admin/admin.scss
+++ b/resources/scss/admin/admin.scss
@@ -10,7 +10,7 @@
 @import "~bootstrap-select/sass/bootstrap-select.scss";
 
 // Import md.bootstrappersiandatetimepicker
-@import "~md.bootstrappersiandatetimepicker/dist/mds.bs.datetimepicker.style.css";
+@import "~md.bootstrappersiandatetimepicker/dist/jquery.md.bootstrap.datetimepicker.style.css";
 
 // Import Custom SB Admin 2 Mixins and Components
 @import "mixins.scss";
